--- a/todo-with-ktor/gradle.properties
+++ b/todo-with-ktor/gradle.properties
@@ -1,4 +1,8 @@
-logback_version=1.2.1
-ktor_version=1.2.6
 kotlin.code.style=official
 kotlin_version=1.3.61
+ktor_version=1.2.6
+exposed_version=0.20.3
+h2_version=1.4.200
+hikaricp_version=3.4.2
+flyway_version=6.1.4
+logback_version=1.2.1
