--- a/todo-with-ktor/resources/application.conf
+++ b/todo-with-ktor/resources/application.conf
@@ -5,6 +5,6 @@ ktor {
     }
 
     application {
-        modules = [ dev.akif.todowithktor.MainKt.module ]
+        modules = [ dev.akif.todowithktor.MainKt.defaultModules ]
     }
 }
